@@ -1,6 +1,9 @@
 (Format: Year/Month/Day)
 Changes for 0.9.11
 *04/09/03:
+  * Fix crash on startup on amd64 (Simon)
+    - We may need to review usages of 0 as opposed to NULL
+    XmbFontImp.cc
   * Added -nearmouse to FbRun (Mathias)
     main.cc
 *04/09/02:
